--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@svgr/webpack": "4.3.2",
     "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.1.3",
+    "@types/enzyme": "^3.10.3",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.2",
     "@types/react": "16.9.2",
