--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,7 @@
     "noEmit": true,
     "jsx": "react",
     "paths": {
-      "shared": ["./modules/shared"],
-      "todo-list": ["./modules/todo-list"],
+      "@modules/*": ["./modules/*"]
     }
   },
   "include": [
