--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
+    "test:generate-output": "CI=true node scripts/test.js --json --outputFile=.jest-test-results.json",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -84,9 +85,16 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^5.2.3",
     "@storybook/addon-actions": "^5.2.3",
+    "@storybook/addon-backgrounds": "^5.2.3",
     "@storybook/addon-info": "^5.2.1",
+    "@storybook/addon-jest": "^5.2.3",
+    "@storybook/addon-knobs": "^5.2.3",
     "@storybook/addon-links": "^5.2.3",
+    "@storybook/addon-notes": "^5.2.3",
+    "@storybook/addon-options": "^5.2.3",
+    "@storybook/addon-storysource": "^5.2.3",
     "@storybook/addons": "^5.2.3",
     "@storybook/cli": "^5.2.1",
     "@storybook/react": "^5.2.3",
